--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2"
+    "@types/passport": "^1.0.12",
+    "express": "^4.18.2",
+    "nodemon": "^3.0.1",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.5.7",
+    "@types/passport-google-oauth20": "^2.0.11",
     "typescript": "^5.2.2"
   },
   "scripts": {
