--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "typescript": "^5.2.2"
   },
   "scripts": {
-    "start": "tsc && node ./dist/index.js",
+    "start": "node ./dist/index.js",
     "tsc": "tsc",
-    "watch": "tsc -w"
+    "watch": "tsc -w",
+    "build": "tsc"
   }
 }
