--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "mongoose": "^7.5.0",
     "nodemon": "^3.0.1",
     "passport": "^0.6.0",
-    "passport-google-oauth20": "^2.0.0",
-    "typescript": "^5.2.2"
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.5.7",
-    "@types/passport-google-oauth20": "^2.0.11"
+    "@types/passport-google-oauth20": "^2.0.11",
+    "typescript": "^5.2.2"
   },
   "scripts": {
     "start": "node ./dist/index.js",
