--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "license": "MIT",
   "dependencies": {
     "@types/passport": "^1.0.12",
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.5.7",
+    "@types/passport-google-oauth20": "^2.0.11",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^6.0.0",
