--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@types/passport": "^1.0.12",
     "@types/express": "^4.17.17",
     "@types/node": "^20.5.7",
+    "@types/passport": "^1.0.12",
     "@types/passport-google-oauth20": "^2.0.11",
+    "cookie-session": "^2.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^6.0.0",
@@ -17,7 +18,9 @@
     "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
+    "@types/cookie-session": "^2.0.44",
     "@types/express": "^4.17.17",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20.5.7",
     "@types/passport-google-oauth20": "^2.0.11",
     "typescript": "^5.2.2"
