--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/node": "^20.5.7",
     "@types/passport": "^1.0.12",
     "@types/passport-google-oauth20": "^2.0.11",
+    "concurrently": "^8.2.1",
     "cookie-session": "^2.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -29,6 +30,8 @@
     "start": "node ./dist/index.js",
     "tsc": "tsc",
     "watch": "tsc -w",
-    "build": "tsc"
+    "build": "tsc",
+    "client": "yarn start --prefix client",
+    "dev": "concurrently \"yarn run start\" \"yarn run client\""
   }
 }
